$Id: History 73136 2013-08-19 14:28:09Z sincerti $
-------------------------------------------------------------------

     =========================================================
 		      Geant4 - Microdosimetry example
     =========================================================

                       Package History file
                       --------------------

12 Nov 2014 - M. Karamitros - microdosimetry-V10-00-07
- Add a ifdef G4UI_USE_QT to avoid compilation error on ctest
- Copy README to bin directory
- Only create the vis viewer in the main

10 Nov 2014 - M. Karamitros - microdosimetry-V10-00-06
- Correct the check on the output file command line option

10 Nov 2014 - M. Karamitros - microdosimetry-V10-00-05
- Following Laurent's development: add a tab in the Qt interface 
displaying the README

10 Nov 2014 - M. Karamitros - microdosimetry-V10-00-04
- CommandLine updated
- Default output file's name corrected
- remove microdosmietry.mac

08 Nov 2014 - M.Karamitros - microdosimetry-V10-00-03
- Clean command line options

06 Nov 2014 - M.Karamitros - microdosimetry-V10-00-02
- Check analysis manager is actived removed
- Select gui + vis from command line option 

23 Oct 2013 - V.Ivanchenko - microdosimetry-V10-00-01
- Fixed user actions and enter flexible number of threads

22 Oct 2013 - M. Karamitros - microdosimetry-V10-00-00
- confusion : 09-06 -> 10-00 - change name of the tag

22 Oct 2013 - M. Karamitros - microdosimetry-V09-06-12
- Update READMEs

22 Oct 2013 - M. Karamitros - microdosimetry-V09-06-11
- src: Add missing base class initialization

22 Oct 2013 - M. Karamitros - microdosimetry-V09-06-10
- Migration to extended
- Add missing virtuals, clean classes
- Add .README
- microdosimetry.mac -> microdosimetry.in
- CMakeLists.txt: improve configuration of mac files
- Add RunInitObserver class and make TrackingAction dependent on it

3 Oct 2013 - S. Incerti - microdosimetry-V09-06-09
- Updated CMakeLists.txt
