@@ -1,12 +1,8 @@
 /tracking/verbose 0
 /run/verbose 2
 /process/eLoss/verbose 1
-/gun/particle alpha+
-/gun/energy 50 MeV
+/gun/particle proton
+/gun/energy 5 MeV
 /run/initialize
-/run/beamOn 1
-/gun/particle alpha
-/gun/position 0 0 0 mm
-/gun/energy 20 keV
-/run/beamOn 1
+/run/beamOn 2
 
